Aboutus + bugfixes
Finished aboutus
Distribute images in folders and change adresses in html
Add .invisible in base.scss

--- a/src/sass/layout/_about-us.scss
+++ b/src/sass/layout/_about-us.scss
@@ -41,6 +41,7 @@
     font-size: 32px;
     line-height: 1.21;
     margin-top: 0;
+    text-align: left;
   }
 
   // @media screen and (min-width: 1280px) {
@@ -52,16 +53,13 @@
   line-height: 1.25;
   color: $brown-clr;
 
-  // @media screen and (min-width: 768px) {
-  // }
-
   @media screen and (min-width: 1280px) {
     margin-bottom: 30px;
     font-size: 18px;
     line-height: 1.22;
   }
 
-  &:nth-child(2) {
+  &:not(:last-of-type) {
     margin-bottom: 20px;
   }
 
@@ -90,84 +88,18 @@
     height: 381px;
   }
 }
-
-// .container__about-us {
-
-//     @media screen and (min-width: 768px) {
-//         display: flex;
-//         justify-content: space-between;
-//     }
-// }
-
-// .about-us__history {
-
-//     @media screen and (min-width: 768px) {
-//         width: 337px;
-//     }
-
-//     @media screen and (min-width: 1280px) {
-//         width: 608px;
-//     }
-// }
-
-// .about-us__title {
-//     font-weight: 500;
-//     font-size: 24px;
-//     line-height: 1.2;
-//     color: $brown-clr;
-//     margin-bottom: 8px;
-//     margin-top: 28px;
-
-//     @media screen and (min-width: 768px) {
-//         margin-bottom: 28px;
-//         font-size: 32px;
-//         line-height: 1.21;
-//         margin-top: 0;
-//     }
-
-//     @media screen and (min-width: 1280px) {}
-// }
-
-// .about-us__text {
-//     font-size: 16px;
-//     line-height: 1.25;
-//     color: $brown-clr;
-
-//     @media screen and (min-width: 768px) {}
-
-//     @media screen and (min-width: 1280px) {
-//         margin-bottom: 30px;
-//         font-size: 18px;
-//         line-height: 1.22;
-//     }
-// }
-
-// .about-us__text:nth-child(2) {
-//     margin-bottom: 20px;
-// }
-
-// .about-us__text:last-child {
-//     display: none;
-
-//     @media screen and (min-width: 768px) {}
-
-//     @media screen and (min-width: 1280px) {
-//         display: contents;
-//     }
-// }
-
-// .about-us__img {
-//     width: 280px;
-//     height: 285px;
-//     width: 100%;
-
-//     @media screen and (min-width: 768px) {
-//         width: 336px;
-//         height: 359px;
-//     }
-
-//     @media screen and (min-width: 1280px) {
-//         width: 608px;
-//         height: 381px;
-//     }
-// }
+.about-us__btn {
+  border: none;
+  background-color: transparent;
+  padding: 0;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 20px;
+  @media screen and (min-width: 768px) {
+    font-size: 18px;
+    line-height: 22px;
+  }
+  @media screen and (min-width: 1280px) {
+    display: none;
+  }
+}
